fix: make login screen responsive on mobile

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -10,7 +10,7 @@
   .form-section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     width: 100%;
     height: 100%;
